# kafka-alert

./: .env.sample  .pre-commit-config.yaml  Jenkinsfile  README.md  docker-compose.yml  dockerfile  main.py  pyproject.toml  requirements.txt
.github/workflows/: bandit.yml
callback/: __init__.py  example.py
callback/MLP_detection/: alert.py
callback/SVM_detection/: alert.py
callback/all/: example.py
callback/detection-result/: alert.py
callback/example/: example.py
callback/heartbeat/: add_database.py
callback/lsm/: add_database.py  alert.py
core/: config.py  dispatcher.py  factory.py  renderer.py
core/providers/: base.py  discord.py  email.py  slack.py
database/: database.py  models.py
templates/discord/: error_report.json.j2
templates/email/: alert.html.j2
tests/: conftest.py  test_discord_provider.py  test_dispatcher.py  test_email_flow.py  test_factory.py  test_integration.py  test_renderer.py  test_slack_provider.py
utils/: kafka_config.py  kafka_manager.py  logger.py  queue_eventmanager.py
