[project]
name = "kafka-alert"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
    "aiokafka>=0.13.0",
    "apprise>=1.9.6",
    "discordwebhook>=1.0.3",
    "jinja2>=3.1.6",
    "kafka-python-ng>=2.2.3",
    "loguru>=0.7.3",
    "pydantic-settings>=2.12.0",
]

[dependency-groups]
dev = [
    "bandit>=1.9.2",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pylint>=4.0.4",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.11",
]
